--- a/src/Views/NhanVien.form
+++ b/src/Views/NhanVien.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
+<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_autoSetComponentName" type="java.lang.Boolean" value="false"/>
@@ -333,12 +333,12 @@
         </Component>
         <Component class="javax.swing.JRadioButton" name="jRadioButton3">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Ngh&#x1ec9;"/>
+            <Property name="text" type="java.lang.String" value="&#x110;&#xe3; ngh&#x1ec9;"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JRadioButton" name="jRadioButton4">
           <Properties>
-            <Property name="text" type="java.lang.String" value="&#x110;i L&#xe0;m"/>
+            <Property name="text" type="java.lang.String" value="&#x110;ang l&#xe0;m"/>
           </Properties>
         </Component>
         <Container class="javax.swing.JPanel" name="jPanel2">
